REST API for deleting instances of config types
Closes sgctl#6

Introduces a new REST API:

```
DELETE /_searchguard/config/{config_type}
```

Calling this API will delete the complete config with the given type.

This is especially intended for deleting the obsolete sg_config config type. To do so, issue this request:

```
DELETE /_searchguard/config/config
```

By default, this action can be only called when using an admin certificate.

See merge request search-guard/search-guard-suite-enterprise!312